--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Install with:
 
-`python3 setup.py install`
+```python3 setup.py install```
 
 
 
@@ -8,4 +8,4 @@ To use:
 
 1) Download and extract repo into same folder as concert .xlsx files
 
-2) `python3 symphony.py`
+2) ```python3 symphony.py```
